--- a/public/index.html
+++ b/public/index.html
@@ -1,74 +1,115 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulario de Login</title>
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="css/principal.css">
+    <link rel="icon" href="img/file.ico">
+    <title>Work Chat</title>
 </head>
 
 <body>
+    <!-- Header -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">
+            <img src="img/logo.png" width="180" height="60" alt="Logo">
+        </a>
+        <div class="ml-auto">
+            <a href="login.html" class="btn btn-login btn-outline mr-2">Iniciar Sesión</a>
+            <a href="registro.html" class="btn btn-register btn-outline">Registro</a>
+        </div>
+    </nav>
 
-    <div class="login-container">
-        <h2>Iniciar Sesión</h2>
-        <form>
-            <label for="usernameL">Usuario:</label>
-            <input type="text" id="username" name="username">
-            
-            <label for="emailL">E-mail:</label>
-            <input type="text" id="email" name="email" required>
+    <!-- Banner con Imagen de Fondo -->
+    <section class="banner">
+        <div class="banner-overlay">
+            <div class="container bg-banner">
+                <h1 class="display-4">Bienvenido a Work Chat</h1>
+                <p class="lead">Todo tu equipo, una sola conversación.</p>
+            </div>
+        </div>
+    </section>
 
-            <label for="passwordL">Contraseña:</label>
-            <input type="password" id="password" name="password" required>
-
-            <input type="button" id="singUp" name="signup_submit" value="Enviar" />
-        </form>
+    <!-- Contenido principal -->
+    <div class="container mt-5">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="bg-container">
+                    <h4>Queremos revolucionar la forma en que trabajas.</h4>
+                    <p class="text-justify">Con Work Chat, tus equipos podrán colaborar de manera más fluida, agilizando
+                        la comunicación
+                        y optimizando la gestión de proyectos. Desde la planificación inicial hasta
+                        la entrega final, Work Chat es tu aliado para alcanzar tus objetivos de manera
+                        más rápida y eficiente.</p>
+                </div>
+                <img src="img/colaboracion.png" alt="colaboracion de equipo" class="img-fluid mt-3 img-custom ">
+            </div>
+            <div class="col-md-6">
+                <div class="bg-container">
+                    <h4>¿Cansado de correos electrónicos interminables y reuniones improductivas?</h4>
+                    <pclass="text-justify">Work Chat te ofrece una solución centralizada para todas tus comunicaciones.
+                        Reduce el tiempo de respuesta, mejora la visibilidad de los proyectos y
+                        aumenta la satisfacción de tu equipo.</p>
+                </div>
+                <img src="img/reuniones.png" alt="reuniones de trabajo" class="img-fluid mt-3 img-custom ">
+            </div>
+        </div>
     </div>
+
+    <!-- Features Section (Columnas con Íconos) -->
+    <section class="container mt-5 bg-func">
+        <div class="text-center mb-5 ">
+            <h2>Nuestras Funciones</h2>
+            <p class="lead">Descubre las características clave de nuestra plataforma</p>
+        </div>
+        <div class="row text-center">
+            <div class="col-md-4 mb-4">
+                <i class="fas fa-comments fa-3x  mb-3"></i>
+                <h5>Comunicación Instantánea</h5>
+                <p>Chat en tiempo real con tus compañeros de trabajo, sin interrupciones.</p>
+            </div>
+            <div class="col-md-4 mb-4">
+                <i class="fas fa-user-shield fa-3x  mb-3"></i>
+                <h5>Privacidad y Seguridad</h5>
+                <p>Tu información y chats están protegidos con los más altos estándares de seguridad.</p>
+            </div>
+            <div class="col-md-4 mb-4">
+                <i class="fas fa-project-diagram fa-3x  mb-3"></i>
+                <h5>Organiza tu trabajo</h5>
+                <p> Crea canales y grupos para organizar tus proyectos y conversaciones.</p>
+            </div>
+            <div class="col-md-4 mb-4">
+                <i class="fas fa-cloud fa-3x  mb-3"></i>
+                <h5>Acceso en la Nube</h5>
+                <p>Accede a tus conversaciones desde cualquier dispositivo, en cualquier lugar.</p>
+            </div>
+            <div class="col-md-4 mb-4">
+                <i class="fas fa-tasks fa-3x  mb-3"></i>
+                <h5>Gestión de tareas y actividades</h5>
+                <p>Trabaja de forma más inteligente, no más duro. Visualiza y organiza tu carga de trabajo.</p>
+            </div>
+            <div class="col-md-4 mb-4">
+                <i class="fas fa-chart-line fa-3x  mb-3"></i>
+                <h5>Seguimiento de proyectos</h5>
+                <p>Mantén el control de tus proyectos en todo momento. Realiza un seguimiento detallado de tus avances.
+                </p>
+            </div>
+        </div>
+    </section>
+    <!-- Footer -->
+    <footer class="footer text-center mt-5">
+        <div class="text-center p-4">
+            <img src="img/file.ico" alt="Icono" width="24" height="24">
+            © 2024 Work Chat. Todos los derechos reservados.
+        </div>
+    </footer>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.11/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
-<script type="module">
-    // Import the functions you need from the SDKs you need
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.14.1/firebase-app.js";
-    import { getDatabase } from "https://www.gstatic.com/firebasejs/10.14.1/firebase-database.js";
-    import { getAuth, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.14.1/firebase-auth.js";
-    // TODO: Add SDKs for Firebase products that you want to use
-    // https://firebase.google.com/docs/web/setup#available-libraries
-  
-    // Your web app's Firebase configuration
-    const firebaseConfig = {
-    apiKey: "AIzaSyCJFw4Tr8d0-2NLtaUAgU15W2t7zaOJ79g",
-    authDomain: "workchat-c8c72.firebaseapp.com",
-    databaseURL: "https://workchat-c8c72-default-rtdb.firebaseio.com",
-    projectId: "workchat-c8c72",
-    storageBucket: "workchat-c8c72.appspot.com",
-    messagingSenderId: "469035320450",
-    appId: "1:469035320450:web:067dd30ab4c6e19541a09b"
-    };
-  
-    // Initialize Firebase
-    const app = initializeApp(firebaseConfig);
-    const database = getDatabase(app);
-    const auth = getAuth();
-
-    singUp.addEventListener('click', (e) => {
-        var email = document.getElementById('email').value;
-        var password = document.getElementById('password').value;
-        var username = document.getElementById('username').value;
-        createUserWithEmailAndPassword(auth, email, password)
-            .then((userCredential) => {
-                // Signed up 
-                const user = userCredential.user;
-                alert('Usuario creado');
-                // ...
-            })
-            .catch((error) => {
-                const errorCode = error.code;
-                const errorMessage = error.message;
-                // ..
-                alert(errorMessage);
-            });
-    });
-
-  </script>
 
 </html>
