--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 <body>
     <!-- Header -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="index.html">
             <img src="img/logo.png" width="180" height="60" alt="Logo">
         </a>
         <div class="ml-auto">
