--- a/public/registro.html
+++ b/public/registro.html
@@ -4,25 +4,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulario de Login</title>
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="css/registro.css">
+    <link rel="icon" href="img/file.ico">
+    <title>Work Chat</title>
 </head>
 <body>
-    <div class="login-container">
-        <h2>Registro</h2>
-        <form id="registroForm">
-            <label for="usernameL">Usuario:</label>
-            <input type="text" id="username" name="username">
-            
-            <label for="emailL">E-mail:</label>
-            <input type="text" id="email" name="email" required>
-
-            <label for="passwordL">Contraseña:</label>
-            <input type="password" id="password" name="password" required>
-
-            <input type="button" id="singUp" name="signup_submit" value="Enviar" />
-        </form>
-        <p>¿Ya tienes una cuenta? <a href="login.html">Inicia sesión aquí</a></p>
+    <div class="container-fluid">
+         <!-- Header -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top nav-registro">
+        <a class="navbar-brand" href="index.html">
+            <img src="img/logo.png" width="180" height="60" alt="Logo">
+        </a>
+        <div class="ml-auto">
+            <a href="login.html" class="btn btn-login btn-outline mr-2">Iniciar Sesión</a>
+        </div>
+    </nav>
+        <div class="row">
+            <div class="col-md-6 d-flex flex-column justify-content-start align-items-center bg-light">
+                <div style="height: 80px;"></div>
+                <nav class="navbar navbar-light w-100 nav-regresar">
+                    <a href="index.html"> 
+                        <i class="fas fa-arrow-left fa-2x btn-regresar"></i>
+                    </a>
+                </nav>
+                <div class="col-md-8 login-container">
+                    <h2>Registro</h2>
+                    <form id="registroForm">
+                        <div class="form-group">
+                            <label for="username">Usuario:</label>
+                            <input type="text" id="username" name="username" class="form-control" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="email">E-mail:</label>
+                            <input type="email" id="email" name="email" class="form-control" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="password">Contraseña:</label>
+                            <input type="password" id="password" name="password" class="form-control" required>
+                        </div>
+                        <div class="d-flex justify-content-center container-btn-enviar">
+                            <button type="button" id="singUp" name="signup_submit" class="btn btn-primary col-md-6">Enviar</button>
+                        </div>
+                       
+                    </form>
+                </div>
+            </div>
+            <div class="col-md-6 image-container">
+                <!-- Imagen se cargará de fondo -->
+            </div>
+        </div>
     </div>
     <script type="module" src="js/registro.js"></script>
 </body>
