Diseño inicio de sesión.

--- a/public/index.html
+++ b/public/index.html
@@ -13,9 +13,9 @@
 
 <body>
     <!-- Header -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light">
         <a class="navbar-brand" href="index.html">
-            <img src="img/logo.png" width="180" height="60" alt="Logo">
+            <img src="img/logo.png" width="150" height="60" alt="Logo">
         </a>
         <div class="ml-auto">
             <a href="login.html" class="btn btn-login btn-outline mr-2">Iniciar Sesión</a>
@@ -37,61 +37,61 @@
     <div class="container mt-5">
         <div class="row">
             <div class="col-md-6">
-                <div class="bg-container">
-                    <h4>Queremos revolucionar la forma en que trabajas.</h4>
+                <div>
+                    <h4  class="bg-subtitle">Queremos revolucionar la forma en que trabajas.</h4>
                     <p class="text-justify">Con Work Chat, tus equipos podrán colaborar de manera más fluida, agilizando
                         la comunicación
                         y optimizando la gestión de proyectos. Desde la planificación inicial hasta
                         la entrega final, Work Chat es tu aliado para alcanzar tus objetivos de manera
                         más rápida y eficiente.</p>
                 </div>
-                <img src="img/colaboracion.png" alt="colaboracion de equipo" class="img-fluid mt-3 img-custom ">
+                <img src="img/img1.jpg" alt="colaboracion de equipo" class="img-fluid mt-3 img-custom ">
             </div>
             <div class="col-md-6">
-                <div class="bg-container">
-                    <h4>¿Cansado de correos electrónicos interminables y reuniones improductivas?</h4>
+                <div>
+                    <h4  class="bg-subtitle">¿Cansado de correos electrónicos interminables y reuniones improductivas?</h4>
                     <pclass="text-justify">Work Chat te ofrece una solución centralizada para todas tus comunicaciones.
                         Reduce el tiempo de respuesta, mejora la visibilidad de los proyectos y
                         aumenta la satisfacción de tu equipo.</p>
                 </div>
-                <img src="img/reuniones.png" alt="reuniones de trabajo" class="img-fluid mt-3 img-custom ">
+                <img src="img/img2.jpg" alt="reuniones de trabajo" class="img-fluid mt-3 img-custom ">
             </div>
         </div>
     </div>
 
     <!-- Features Section (Columnas con Íconos) -->
-    <section class="container mt-5 bg-func">
+    <section class="container mt-5">
         <div class="text-center mb-5 ">
             <h2>Nuestras Funciones</h2>
             <p class="lead">Descubre las características clave de nuestra plataforma</p>
         </div>
-        <div class="row text-center">
-            <div class="col-md-4 mb-4">
+        <div class="row text-center container-func">
+            <div class="func col-md-4 mb-4">
                 <i class="fas fa-comments fa-3x  mb-3"></i>
                 <h5>Comunicación Instantánea</h5>
                 <p>Chat en tiempo real con tus compañeros de trabajo, sin interrupciones.</p>
             </div>
-            <div class="col-md-4 mb-4">
+            <div class="func col-md-4 mb-4">
                 <i class="fas fa-user-shield fa-3x  mb-3"></i>
                 <h5>Privacidad y Seguridad</h5>
                 <p>Tu información y chats están protegidos con los más altos estándares de seguridad.</p>
             </div>
-            <div class="col-md-4 mb-4">
+            <div class="func col-md-4 mb-4">
                 <i class="fas fa-project-diagram fa-3x  mb-3"></i>
                 <h5>Organiza tu trabajo</h5>
                 <p> Crea canales y grupos para organizar tus proyectos y conversaciones.</p>
             </div>
-            <div class="col-md-4 mb-4">
+            <div class="func col-md-4 mb-4">
                 <i class="fas fa-cloud fa-3x  mb-3"></i>
                 <h5>Acceso en la Nube</h5>
                 <p>Accede a tus conversaciones desde cualquier dispositivo, en cualquier lugar.</p>
             </div>
-            <div class="col-md-4 mb-4">
+            <div class="func col-md-4 mb-4">
                 <i class="fas fa-tasks fa-3x  mb-3"></i>
                 <h5>Gestión de tareas y actividades</h5>
                 <p>Trabaja de forma más inteligente, no más duro. Visualiza y organiza tu carga de trabajo.</p>
             </div>
-            <div class="col-md-4 mb-4">
+            <div class=" func col-md-4 mb-4">
                 <i class="fas fa-chart-line fa-3x  mb-3"></i>
                 <h5>Seguimiento de proyectos</h5>
                 <p>Mantén el control de tus proyectos en todo momento. Realiza un seguimiento detallado de tus avances.
@@ -104,8 +104,17 @@
         <div class="text-center p-4">
             <img src="img/file.ico" alt="Icono" width="24" height="24">
             © 2024 Work Chat. Todos los derechos reservados.
+            <img src="img/file.ico" alt="Icono" width="24" height="24">
+        </div>
+        <div class="text-center p-3 creadores">
+            <div class="creadores">
+                <div><i class="fab fa-github"></i> Itzel Daniela Martínez Carrera</div>
+                <div><i class="fab fa-github"></i> Evelyn Dolores Flores Lechuga</div>
+                <div><i class="fab fa-github"></i> Valeria Garzón Nava</div>
+            </div>
         </div>
     </footer>
+
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.11/dist/umd/popper.min.js"></script>
