Diseño del Menú principal

--- a/public/calendario.html
+++ b/public/calendario.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="icon" href="img/file.ico">
     <link rel="stylesheet" href="css/home.css">
-    <title>Home</title>
+    <title>Calendario</title>
 </head>
 
 <body>
@@ -55,23 +55,8 @@
 
             <!-- Título del espacio de trabajo -->
             <div class="workspace-title">
-                <h3>Espacio de trabajo</h3>
-                <div class="container container-cards-equip">
-                    <div class="card card-equip">
-                        <div class="card-header">
-                            Equipo Alfa
-                        </div>
-                        <div class="card-body">
-                            <p>Este es el equipo Alfa. Somos un grupo de profesionales dedicados a...</p>
-                        </div>
-                        <div class="card-footer text-muted">
-                            <button class="chat-button">
-                                <i class="fa-regular fa-comment"></i>
-                                Chat
-                            </button>
-                        </div>
-                    </div>
-                </div>
+                <h3>Calendario</h3>
+               
             </div>
         </div>
     </div>
