--- a/public/tareas.html
+++ b/public/tareas.html
@@ -55,7 +55,7 @@
 
             <!-- Título del espacio de trabajo -->
             <div class="workspace-title">
-                <h3>Tareas</h3>
+                <h3>Historial Tareas</h3>
                
             </div>
         </div>
