--- a/public/nuevoEquipo.html
+++ b/public/nuevoEquipo.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="icon" href="img/file.ico">
     <link rel="stylesheet" href="css/home.css">
-    <title>Home</title>
+    <link rel="stylesheet" href="css/formAddEquip.css">
+    <title>Crear Equipo</title>
 </head>
 
 <body>
@@ -47,7 +48,7 @@
                     <div class="notification">
                         <i class="fas fa-bell"></i>
                     </div>
-                    <div class="logout-btn"  id="logoutButton">
+                    <div class="logout-btn">
                         <a href="#" class="btn btn-danger">Cerrar Sesión</a>
                     </div>
                 </div>
@@ -55,47 +56,32 @@
 
             <!-- Título del espacio de trabajo -->
             <div class="workspace-title">
-                <h3>Espacio de trabajo</h3>
-                <div class="container container-cards-equip d-flex justify-content-start flex-wrap">
-                    <div id="btn-nuevo-equipo" class="card card-equip new-team-card" style="cursor: pointer;">
-                        <div class="card-body">
-                            <img src="./img/add.png" alt="agregar-equipo" style="max-width: 80px;">
-                            <h5>Nuevo equipo</h5>
-                        </div>
+                <div class="form-container p-4 mx-auto">
+                    <div class="container text-center">
+                        <h2 class="mb-3">Crear un Nuevo Equipo</h2>
                     </div>
-                    <div class="card card-equip">
-                        <div class="card-body" id="equipo" style="cursor: pointer;">
-                            <img src="./img/equip.jpg" alt="logo-equipo" class="img-fluid">
-                            <h5>Equipo Work Chat</h5>
+                    <form action="">
+                        <div class="input-group mb-3">
+                            <span class="input-group-text">Nombre del equipo:</span>
+                            <input type="text" class="form-control" placeholder="Ingresa el nombre del equipo" aria-label="Nombre del equipo" required>
                         </div>
-                        <div class="card-footer text-muted d-flex justify-content-end card-footer-btn">
-                            <button id="btn-add-tarea" class="chat-button">
-                                <i class="fa-solid fa-plus-square"></i> Tarea
-                            </button>
-                            <button id="btn-chat-equip" class="chat-button ms-3">
-                                <i class="fa-regular fa-comment"></i> Chat
-                            </button>
+                        <p>Agrega colaboradores con el correo que están registrados.</p>
+                        <div class="input-group mb-3">
+                            <input type="email" class="form-control" placeholder="Correo del colaborador" aria-label="Correo del colaborador">
+                            <button type="button" class="btn btn-outline-primary" id="add-member">Agregar Miembro</button>
                         </div>
-                    </div>
+                        <div class="form-floating">
+                            <p>Colaboradores:</p>
+                            <textarea class="form-control" style="height: 150px" disabled></textarea>
+                        </div>
+                        <div class="container d-flex justify-content-center p-3">
+                            <button type="submit" class="btn btn-success w-50">Crear Equipo</button>
+                        </div>                        
+                    </form>
                 </div>
             </div>
         </div>
     </div>
-    <script type="module" src="./js/home.js"></script>
-    <script>
-        // Redireccionar al hacer clic en el div "Nuevo equipo"
-        document.getElementById("btn-nuevo-equipo").addEventListener("click", function() {
-            window.location.href = "nuevoEquipo.html"; 
-        });
-        // Redireccionar a las tareas del equipo
-        document.getElementById("equipo").addEventListener("click", function() {
-            window.location.href = "tareasEquipo.html"; 
-        });
-        // Redireccionar a crear tarea
-        document.getElementById("btn-add-tarea").addEventListener("click", function() {
-            window.location.href = "crearTarea.html"; 
-        });
-    </script>
 </body>
 
 </html>
